# KindleDashboard

./: .gitignore  Cargo.toml  README.md
src/: calendar.rs  main.rs  news.rs  radar.rs  renderer.rs  stats.rs  utils.rs  weather.rs
src/stats/: btc.rs  halving.rs  linear_rg.rs  linux.rs  linux_version.rs  spx.rs  yield_spread.rs
