[package]
name = "kindle"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
google-calendar3 = "*"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "11.0.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking", "rustls-tls"] }
chrono = "0.4.38"
regex = "1.10.5"
image = "0.25.1"
resvg = "0.42.0"
usvg = "0.42.0"
tiny-skia = "0.11.4"
fontdb = "0.20.0"
textwrap = "0.16.1"
base64 = "0.22.1"
log = "0.4.22"
env_logger = "0.11.3"
async-std = "1.12.0"
